mix java and scala