@@ -5,7 +5,14 @@ This app has the following features:
 - mix Java and Scala code - we should not do this. A better way is to separate
   in different modules.
 
-With this pom.xml, java code is compiled twice.
+With this pom.xml, java code is compiled twice. 
+
+Without --add-modules java.base switch, Java code has syntax error
+
+![java.base](docs/intellij-java.png)
+
+Click on the error to add this.
+
 ## Run
 The app can be started from
 - IntelliJ
